--- a/src/app/route/task/task-list/task-list.component.scss
+++ b/src/app/route/task/task-list/task-list.component.scss
@@ -22,6 +22,10 @@ form {
         font-size: 1rem;
     }
 
+    input {
+width: 100%;
+    }
+
     button {
         background-color: $primary-color;
         color: #fff;
@@ -43,6 +47,7 @@ ul {
         align-items: center;
         gap: 0.5rem;
         margin-bottom: 0.5rem;
+        border-bottom: 1px solid;
 
         label {
             flex: 1;
