--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,11 +4,11 @@
       <mat-icon>menu</mat-icon>
     </button>
     <span class="toolbar-title">{{ currentTitle() }}</span>
-    <ng-container *ngIf="!remult.authenticated()">
+    <!-- <ng-container *ngIf="!remult.authenticated()">
       <button mat-stroked-button class="toolbar-button" (click)="signIn()">
         {{ terms.signIn }}
       </button>
-    </ng-container>
+    </ng-container> -->
     <ng-container *ngIf="remult.authenticated()">
       <button
         mat-stroked-button
