--- a/src/app/route/task/task-list/task-list.component.scss
+++ b/src/app/route/task/task-list/task-list.component.scss
@@ -15,7 +15,8 @@ form {
     flex-direction: column;
     gap: 0.5rem;
 
-    input, button {
+    input,
+    button {
         padding: 0.5rem;
         border-radius: 4px;
         border: 1px solid #ccc;
@@ -23,7 +24,7 @@ form {
     }
 
     input {
-width: 100%;
+        width: 100%;
     }
 
     button {
@@ -41,6 +42,7 @@ width: 100%;
 ul {
     list-style: none;
     padding: 0;
+    // position: sticky;
 
     li {
         display: flex;
