--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -59,4 +59,10 @@
       </div>
     </div>
   </mat-sidenav-container>
+  
+  <div class="biztechoff">
+    <!-- <ngx-marquee> -->
+    <span (click)="this.openBizTechoff()">BizTechoff™v{{ this.version }}</span>
+    <!-- </ngx-marquee> -->
+  </div>
 </div>
